; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_arrayfunction_override.c_get_array_function.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_arrayfunction_override.c_get_array_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@get_array_function.ndarray_array_function = internal global i32* null, align 8
@.str = private unnamed_addr constant [19 x i8] c"__array_function__\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @get_array_function to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_array_function(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** @get_array_function.ndarray_array_function, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32* (...) @get_ndarray_array_function()
  store i32* %8, i32** @get_array_function.ndarray_array_function, align 8
  br label %9

9:                                                ; preds = %7, %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i64 @PyArray_CheckExact(i32* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %9
  %14 = load i32*, i32** @get_array_function.ndarray_array_function, align 8
  %15 = call i32 @Py_INCREF(i32* %14)
  %16 = load i32*, i32** @get_array_function.ndarray_array_function, align 8
  store i32* %16, i32** %2, align 8
  br label %29

17:                                               ; preds = %9
  %18 = load i32*, i32** %3, align 8
  %19 = call i32* @PyArray_LookupSpecial(i32* %18, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  store i32* %19, i32** %4, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = icmp eq i32* %20, null
  br i1 %21, label %22, label %27

22:                                               ; preds = %17
  %23 = call i64 (...) @PyErr_Occurred()
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %22
  %26 = call i32 (...) @PyErr_Clear()
  br label %27

27:                                               ; preds = %25, %22, %17
  %28 = load i32*, i32** %4, align 8
  store i32* %28, i32** %2, align 8
  br label %29

29:                                               ; preds = %27, %13
  %30 = load i32*, i32** %2, align 8
  ret i32* %30
}

declare dso_local i32* @get_ndarray_array_function(...) #1

declare dso_local i64 @PyArray_CheckExact(i32*) #1

declare dso_local i32 @Py_INCREF(i32*) #1

declare dso_local i32* @PyArray_LookupSpecial(i32*, i8*) #1

declare dso_local i64 @PyErr_Occurred(...) #1

declare dso_local i32 @PyErr_Clear(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
